[doc] Update man pages

--- a/doc/nhi-fetch.1
+++ b/doc/nhi-fetch.1
@@ -12,10 +12,37 @@ nhi fetch [--help | -h] <session> [<start:end>] [--exit-status | -s <exit-status
 -h, --help
 Show context-sensitive help.
 
+.TP
 <session>
+You can specify session by its:
+.RS
+- index, sessions are arranged from oldest to the most recently started. Indexing starts from 0, not from 1.
+.br
+- negative index, the index value of -1 gives the most recently started session, -2 gives the second most recent session, etc.
+.br
+- name.
 
+Indicator needs to be specified inside curly brackets.
+.RE
+
+.TP
 [<start:end>]
+If you want to fetch only a part of shell session you can easily specify which commands you would like to fetch.
+.RS
+To achieve that use slice notation: {X:Y}. Slice notation needs to be specified in curly brackets.
+.br
+X is start range, Y is end range, you can replace X and Y with:
+.br
+- index, commands are arranged from oldest to the most recently started. Indexing starts from 0, not from 1.
+.br
+- negative index.
+.br
+- indicator, you can discover command indicator that you are interested in using nhi-log-session(1).
+.br
+You can also keep X or Y empty, in order to not set a border.
 
+nhi slice notation is inspired by python slice notation.
+.RE
 
 .TP
 -s, --exit-status=<exit-status>
