--- a/doc/nhi-log-session.1
+++ b/doc/nhi-log-session.1
@@ -15,8 +15,18 @@ nhi log [--help | -h] <session> [--exit-status | -s <exit-status>] [--directory 
 -h, --help
 Show context-sensitive help.
 
+.TP
 <session>
+You can specify session by its:
+.RS
+- index, sessions are arranged from oldest to the most recently started. Indexing starts from 0, not from 1.
+.br
+- negative index, the index value of -1 gives the most recently started session, -2 gives the second most recent session, etc.
+.br
+- name.
 
+Indicator needs to be specified inside curly brackets.
+.RE
 
 .TP
 -s, --exit-status=<exit-status>
