[doc] Minor man improvement

--- a/doc/nhi-rename.1
+++ b/doc/nhi-rename.1
@@ -26,4 +26,4 @@ Indicator needs to be specified inside curly brackets.
 
 .TP
 <new-name>
-New name of shell session. Session name can't be a number.
+New name of shell session. New name can't be a number.
