--- a/doc/nhi-fetch.1
+++ b/doc/nhi-fetch.1
@@ -37,7 +37,7 @@ X is start range, Y is end range, you can replace X and Y with:
 .br
 - negative index.
 .br
-- indicator, you can discover command indicator that you are interested in using nhi-log-session(1).
+- indicator, you can discover command indicator that you are interested in by using nhi-log-session(1).
 .br
 You can also keep X or Y empty, in order to not set a border.
 
