--- a/doc/nhi-log-session.1
+++ b/doc/nhi-log-session.1
@@ -1,4 +1,4 @@
-.TH NHI-LOG-SESSION 1 2021
+.TH NHI-LOG-SESSION 1 2023
 
 .SH NAME
 nhi-log-session - Show logs of executed commands within <session>.
@@ -31,6 +31,7 @@ Indicator needs to be specified inside curly brackets.
 .TP
 -s, --exit-status=<exit-status>
 Only show command(s) with specified exit status.
+If `not` precedes exit status, then command(s) with exit status other than given will be shown. For example, specifying `not0` will show command(s) with different exit status than 0.
 
 .TP
 -d, --directory=<directory>
