--- a/doc/nhi-log.1
+++ b/doc/nhi-log.1
@@ -1,4 +1,4 @@
-.TH NHI-LOG 1 2021
+.TH NHI-LOG 1 2023
 
 .SH NAME
 nhi-log - Show logs of shell sessions.
@@ -18,6 +18,7 @@ Show context-sensitive help.
 .TP
 -s, --exit-status=<exit-status>
 Only show session(s) where command(s) have specified exit status.
+If `not` precedes exit status, then session(s) with command(s) exit status other than given will be shown. For example, specifying `not0` will show session(s) with command(s) with different exit status than 0.
 
 .TP
 -d, --directory=<directory>
